# Foodles_technical_test

./: README.md  main.py  pyproject.toml  test_compute_words_frequency.py
