[tool.poetry]
name = "Foodles technical test"
version = "0.1.0"
description = ""
authors = ["Clement Dejoie <clement.dejoie@gmail.com>"]
readme = "README.md"
packages = [{include = "python_sandbox"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
