[tool.poetry]
name = "Foodles technical test"
version = "0.2.0"
description = ""
authors = ["Clement Dejoie <clement.dejoie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
